--- a/SilverTest/SerialPortLab/MainWindow.xaml
+++ b/SilverTest/SerialPortLab/MainWindow.xaml
@@ -77,6 +77,7 @@
                      Header="测试按钮">
                 <Canvas>
                     <Button x:Name="testalarmobject" Content="测试alarmobject" Height="35" Width="82" Canvas.Left="82" Canvas.Top="69" Click="Testalarmobject_Click"/>
+                    <Button x:Name="makevicedatabtn" Content="生成副通道测试数据" Height="35" Width="82" Canvas.Left="201" Canvas.Top="69" Click="Makevicedatabtn_Click" />
                 </Canvas>
             </TabItem>
 
