--- a/SilverTest/SilverTest/MainWindow.xaml
+++ b/SilverTest/SilverTest/MainWindow.xaml
@@ -112,10 +112,14 @@
                     <MenuItem x:Name="modifytestmenu" Header="修改测试数据" Click="modifytestmenu_Click" ></MenuItem>
                     <MenuItem x:Name="controlpanelmenu" Header="控制面板" Click="controlpanelmenu_Click">
                     </MenuItem>
-                    <MenuItem x:Name="setportmenu" Header="设置串口" Click="setportmenu_Click">
+                </MenuItem>
+                <MenuItem Height="28" Header="设置">
+                    <MenuItem x:Name="setportmenu" Header="设置" Click="setportmenu_Click">
+                        <!--
                         <MenuItem.Icon>
                             <iconPacks:PackIconMaterial Kind="Usb" />
                         </MenuItem.Icon>
+                        -->
                     </MenuItem>
                 </MenuItem>
                 <MenuItem  Height="28" Header="测汞或砷" Visibility="Collapsed">
