--- a/SilverTest/SilverTest/CommandPanelWnd.xaml
+++ b/SilverTest/SilverTest/CommandPanelWnd.xaml
@@ -124,7 +124,10 @@
                     <Button x:Name="m51" Content="清洗" Height="30" Width="60" HorizontalAlignment="Left" Background="LightPink" Margin="20,2,0,0" Visibility="Collapsed" Click="m51_Click"></Button>
                     <Button x:Name="m52" FontSize="12" Content="测量" Height="30" Width="60" HorizontalAlignment="Left" Background="LightPink" Margin="20,2,0,0" Visibility="Collapsed" Click="m52_Click" ></Button>
                     <Button x:Name="m53" FontSize="12" Content="返回上一级" Height="30" Width="75" HorizontalAlignment="Left" Background="LightPink" Margin="20,2,0,0" Visibility="Collapsed" Click="m53_Click"></Button>
-                    <Button x:Name="pm6" FontSize="12" Content="参数设置"  Height="30" Width="70" HorizontalAlignment="Left" Click="pm6_Click"></Button>
+                    <Button x:Name="pm6" FontSize="12" Content="参数设置"  Height="30" Width="70" HorizontalAlignment="Left" Click="pm6_Click"></Button>                    
+                    <Button x:Name="pma" FontSize="12" Content="快速测量"  Height="30" Width="70" HorizontalAlignment="Left" Click="Pma_Click"></Button>
+                    <Button x:Name="ma1" FontSize="12" Content="开始" Height="30" Width="75" HorizontalAlignment="Left" Background="LightPink" Margin="20,2,0,0" Visibility="Collapsed" Click="Ma1_Click"></Button>
+                    <Button x:Name="ma2" FontSize="12" Content="停止" Height="30" Width="75" HorizontalAlignment="Left" Background="LightPink" Margin="20,2,0,0" Visibility="Collapsed" Click="Ma2_Click"></Button>
                     <Button x:Name="pm7" FontSize="12" Content="状态获取"  Height="30" Width="70" HorizontalAlignment="Left" Click="pm7_Click"></Button>
                     <Button x:Name="pm8" FontSize="12" Content="监控"  Height="30" Width="70" HorizontalAlignment="Left" Click="Pm8_Click"></Button>
                     <Button x:Name="m81" FontSize="12" Content="开始监控" Height="30" Width="60" HorizontalAlignment="Left" Background="LightPink" 
